tests/ctu/pass/immediate-invoke.ct
@entry
def entry {
    return (lambda(i: int): int => i * i)(5);
}
