tests/ctu/fail/recurse-lambda.ct
@entry
def main {
    var i = lambda => i();

    return i();
}
